@@ -4,6 +4,10 @@ Sanitize History
 Version 1.3.0 (git)
   * The default value for the :output config is now :html. Previously it was
     :xhtml.
+  * Added a :whitespace_elements config, which specifies elements (such as <br>
+    and <p>) that should be replaced with whitespace when removed in order to
+    preserve readability. See the README for the default list of elements that
+    will be replaced with whitespace when removed.
   * Added the `abbr`, `dfn`, `kbd`, `mark`, `s`, `samp`, `time`, and `var`
     elements to the whitelists for `Sanitize::Config::BASIC` and
     `Sanitize::Config::RELAXED`.
